<resources>
    <string name="app_name">PetShelterFriends</string>
    <string name="ps_friends">PSFriends</string>
    <string name="proceed">Proceed</string>
    <string name="login">Login</string>
    <string name="fill_in_your_details_to_get_started">Fill in your details to get started.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="have_you_forgotten_your_password">Have you forgotten your password?</string>
    <string name="log_in">Log In</string>
    <string name="cat_dog_bird_tree_image">Cat, dog, bird, tree image</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_an_account">Create an account</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="facebook_app_id" translatable="false">691766819238109</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1234</string>
    <string name="facebook_client_token" translatable="false">a6275f7f4f59975be7a18663203cefa0</string>
    <string name="confirmation_email">Confirmation email</string>
    <string name="we_have_sent_you_an_email_to_confirm_your_account">We have sent you an email to confirm your account</string>
    <string name="flying_paper_plane">Flying paper plane</string>
    <string name="accept">Accept</string>
    <string name="don_t_worry_write_the_email_with_which_you_are_registered_and_we_will_send_you_the_steps_you_must_follow_to_change_your_password">Don\'t worry, write the email with which you are registered and we will send you the steps you must follow to change your password.</string>
    <string name="send">Send</string>
    <string name="close">Close</string>
    <string name="we_have_sent_you_an_email_with_the_steps_you_must_follow_to_change_your_password">We have sent you an email with the steps you must follow to change your password.</string>
    <string name="open_menu">Open Menu</string>
    <string name="notification_bell">Notification bell</string>
    <string name="paw_print">Paw print</string>
    <string name="adopt">Adopt</string>
    <string name="charity_hearth">Charity hearth</string>
    <string name="donate">Donate</string>
    <string name="user_profile">User profile</string>
    <string name="user_profile_image">User profile image</string>
    <string name="profile">Profile</string>
    <string name="how_to_help_actions">How to help actions</string>
    <string name="adopt_a_pet">Adopt a pet</string>
    <string name="become_a_sponsor">Become a sponsor</string>
    <string name="material_support">Material support</string>
    <string name="become_a_volunteer">Become a volunteer</string>
    <string name="what_do_you_look_for_in_a_pet">What do you look for in a pet?</string>
    <string name="filter_description">To improve your search and experience in our app we would like to know more about you. You can set your preferences in the profile and in the search filters whenever you want.</string>
    <string name="small_dog">Small dog</string>
    <string name="big_dog">Big dog</string>
    <string name="size">Size</string>
    <string name="age_years">Age (years)</string>
    <string name="_1">+1</string>
    <string name="_10">+10</string>
    <string name="sex">Sex</string>
    <string name="male_sign">Male sign</string>
    <string name="female_sign">Female sign</string>
    <string name="gender">Gender</string>
    <string name="step_1_5">1/5</string>
    <string name="step_2_5">2/5</string>
    <string name="step_3_5">3/5</string>
    <string name="step_4_5">4/5</string>
    <string name="step_5_5">5/5</string>
    <string name="fit_for_children">Fit for children</string>
    <string name="not_fit_for_children">Not fit for children</string>
    <string name="fit_for_guarding">Fit for guarding</string>
    <string name="not_fit_for_guarding">Not fit for guarding</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="skip">Skip</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="between">Between</string>
    <string name="back">Back</string>
    <string name="filter">Filter</string>
    <string name="favorites">Favorites</string>
    <string name="location">Location</string>
    <string name="timisoara">Timisoara</string>
    <string name="arad">Arad</string>
    <string name="ineu">Ineu</string>
    <string name="small_size">Small size</string>
    <string name="young">Young</string>
    <string name="male">Male</string>
    <string name="milo">Milo</string>
    <string name="arthur">Arthur</string>
    <string name="a_dog_named_milo">A dog named Milo</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="_3_years">3 years</string>
    <string name="a_dog_named_arthur">A dog named Arthur</string>
    <string name="a_cat_named_maya">A cat name Maya</string>
    <string name="_1_year">1 year</string>
    <string name="maya">Maya</string>
    <string name="oscar">Oscar</string>
    <string name="_2_years">2 years</string>
    <string name="a_dog_named_oscar">A dog named Oscar</string>
    <string name="_6_7_kg">6.7 kg</string>
    <string name="medium">Medium</string>
    <string name="fox_terrier">Fox Terrier</string>
    <string name="veterinarian_data">Veterinarian data</string>
    <string name="id">ID</string>
    <string name="confirmation_tick">Confirmation tick</string>
    <string name="sterilized">Sterilized</string>
    <string name="dewormed">Dewormed</string>
    <string name="vaccines">Vaccines</string>
    <string name="description">Description</string>
    <string name="oscar_dog_description">Oscar is a lovely and well-trained dog. He loves to play when he sees other dogs</string>
    <string name="complete_information_description">Please complete the following information</string>
    <string name="contact_information">Contact information</string>
    <string name="family_and_housing">Family and housing</string>
    <string name="other_pets">Other pets</string>
    <string name="veterinarian">Veterinarian</string>
    <string name="about_the_pet_you_wish_to_adopt">About the pet you wish to adopt</string>
    <string name="personal_references">Personal references</string>
    <string name="what_is_your_occupation">What is your occupation?</string>
    <string name="what_is_your_full_name">What is your full name?</string>
    <string name="what_is_your_address">What is your address?</string>
    <string name="submit">Submit</string>
    <string name="text_paragraph_example">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_print">Print</string>
    <string name="text_share">Share</string>
    <string name="text_generated_file_error">Generated File is null or does not exist!</string>
    <string name="text_create_test_pdf">Create Test Pdf</string>
    <string name="text_create_html_pdf">Create Pdf From HTML</string>
    <string name="text_example">Example</string>
    <string name="text_edit_html_pdf">Edit HTML Pdf</string>
    <string name="app_icon_license">App Icon made by Freepik from www.flaticon.com</string>
    <string name="pdf_icon_license">PDF Icon made by Google from www.flaticon.com</string>
    <string name="text_create_pdf">Create PDF</string>
    <string name="small">Small</string>
    <string name="big">Big</string>
    <string name="female">Female</string>
    <string name="old">Old</string>
    <string name="middle_age">Middle age</string>
    <string name="label_chooser_title">Choose email provider</string>
    <string name="label_share_message">Pet adoption document</string>
    <string name="email_subject">Pet Adoption Papers</string>
    <string name="full_name">Full name</string>
    <string name="occupation">Occupation</string>
    <string name="address">Address</string>
    <string name="time_at_this_address">Time at this address</string>
    <string name="phone_number">Phone number</string>
    <string name="best_time_to_call">Best time to call</string>
    <string name="next">Next</string>
    <string name="how_many_adults">How many adults?</string>
    <string name="how_many_children">How many children?</string>
    <string name="what_type_of_home_do_you_live_in">What type of home do you live in?</string>
    <string name="please_describe_your_home">Please describe your home</string>
    <string name="does_a_family_member_have_a_known_allergy_to_pets">Does a family member have a known allergy to pets?</string>
    <string name="is_everyone_in_agreement_with_the_decision_to_adopt_a_pet">Is everyone in agreement with the decision to adopt a pet?</string>
    <string name="do_you_have_time_to_provide_adequate_love_and_attention">Do you have time to provide adequate love and attention?</string>
    <string name="if_you_rent_please_give_the_rules_governing_pets_and_the_landlord_s_name_and_number">If you rent, please give the rules governing pets and the landlord\'s name and number</string>
    <string name="information">Information</string>
    <string name="do_you_have_a_regular_veterinarian">Do you have a regular veterinarian?</string>
    <string name="what_other_pets_do_you_have">What other pets do you have?</string>
    <string name="specify_type_and_number">Specify type and number</string>
    <string name="are_these_pets_up_to_date_on_vaccines">Are these pets up to date on vaccines?</string>
    <string name="have_you_ever_surrendered_a_pet">Have you ever surrendered a pet?</string>
    <string name="please_tell_us_what_happened">Please, tell us what happened</string>
    <string name="have_you_ever_had_a_pet_euthanized">Have you ever had a pet euthanized</string>
    <string name="how_do_you_discipline_your_pet">How do you discipline your pet?</string>
    <string name="please_describe">Please, describe</string>
    <string name="where_will_the_pet_spend_the_day">Where will the pet spend the day?</string>
    <string name="where_will_the_pet_spend_the_night">Where will the pet spend the night?</string>
    <string name="do_you_agree_to_provide_regular_health_care_by_a_licensed_veterinarian">Do you agree to provide regular health care by a Licensed Veterinarian?</string>
    <string name="do_you_agree_to_contact_us_if_you_can_no_longer_keep_this_pet">Do you agree to contact us if you can no longer keep this pet?</string>
    <string name="new_pet_image_view">New pet image view</string>
    <string name="weight">Weight</string>
    <string name="breed">Breed</string>
    <string name="add">Add</string>
    <string name="volunteer">Volunteer</string>
    <string name="support">Support</string>
    <string name="donation">Donation</string>
    <string name="pets">Pets</string>
    <string name="about_me">About me</string>
    <string name="pet_name">Pet name</string>
    <string name="pet_breed">Pet breed</string>
    <string name="pet_age">Pet age</string>
    <string name="pet_sex">Pet sex</string>
    <string name="pet_size">Pet size</string>
    <string name="age">Age</string>
</resources>