<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:layout_gravity="center"
    android:background="@drawable/popup_frame">

    <ImageView
        android:id="@+id/popUpForgottenPasswordConfirmationClose_imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/cancel"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/close" />

    <TextView
        android:id="@+id/popUpForgottenPasswordConfirmationTitle_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_you_forgotten_your_password"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@id/popUpForgottenPasswordConfirmationClose_imageView"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/popUpForgottenPasswordConfirmationDescription_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we_have_sent_you_an_email_with_the_steps_you_must_follow_to_change_your_password"
        android:layout_below="@+id/popUpForgottenPasswordConfirmationTitle_textView"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:layout_margin="5dp"/>

    <ImageView
        android:id="@+id/popUpForgottenPasswordConfirmationPaperPlane_imageView"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/paper_airplane"
        android:layout_below="@id/popUpForgottenPasswordConfirmationDescription_textView"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/flying_paper_plane" />

    <Button
        android:id="@+id/popUpForgottenPasswordConfirmationAccept_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:layout_below="@+id/popUpForgottenPasswordConfirmationPaperPlane_imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="20sp"/>

</RelativeLayout>